fixed card width not resizing on small screens

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,9 @@ body {
 #projects article {
   user-select: none;
 
+  min-width: 33%;
+  width: min-content;
+
   margin: 1rem;
   padding: 1rem;
   border-radius: 1.5rem;
@@ -27,6 +30,10 @@ body {
 
 #projects article:hover {
   cursor: pointer;
+}
+
+#projects article img {
+  width: 100%;
 }
 
 a {
